--- a/Exchange gen/Exchange gen.csproj
+++ b/Exchange gen/Exchange gen.csproj
@@ -50,5 +50,8 @@
       <Version>106.11.7</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
